Fixing performance and color

--- a/crates/page/src/landing_page/style.css
+++ b/crates/page/src/landing_page/style.css
@@ -42,11 +42,11 @@ body {
 }
 
 #background-canvas {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: -1;
     pointer-events: none;
 }
@@ -60,6 +60,7 @@ body {
     padding: 8rem 4rem 10rem;
     background-color: transparent;
     position: relative;
+    overflow: hidden;
     color: #ffffff;
 }
 
