--- a/crates/page/src/landing_page/style.css
+++ b/crates/page/src/landing_page/style.css
@@ -30,17 +30,17 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0 4rem;
-    background-color: var(--primary-color);
+    background-color: rgb(var(--primary-color));
     height: 8vh;
     min-height: 60px;
-    border-bottom: 2px solid #000;
+    border-bottom: 2px solid --secondary-color;
     box-sizing: border-box;
     z-index: 100;
 }
 
 .footer {
     border-bottom: none;
-    border-top: 2px solid #000;
+    border-top: 2px solid --secondary-color;
 }
 
 .nav-left {
