--- a/crates/page/src/landing_page/style.css
+++ b/crates/page/src/landing_page/style.css
@@ -121,21 +121,66 @@ body {
 
 /* Responsiveness */
 @media (max-width: 1100px) {
-    .product-grid {
-        grid-template-columns: 1fr;
-        gap: 2rem;
-        max-width: 500px;
-        overflow-y: auto;
-        max-height: 80vh;
-        padding: 2rem 0;
-    }
-
-    .product-card {
-        padding: 3rem 2rem;
-    }
 
     .navbar,
     .footer {
-        padding: 0 1.5rem;
+        padding: 0 2rem;
+    }
+
+    .nav-right {
+        gap: 1rem;
+    }
+
+    .nav-button {
+        padding: 0.5rem 0.5rem;
+        font-size: 0.8rem;
+    }
+
+    .product-grid {
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 2rem;
+        padding: 6rem 2rem;
+        align-items: center;
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .canvas-overlay {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        overflow-y: auto;
+        pointer-events: auto;
+        -webkit-overflow-scrolling: touch;
+    }
+
+
+    .footer-info {
+        font-size: 0.7rem;
+    }
+}
+
+@media (max-width: 600px) {
+
+    .navbar,
+    .footer {
+        padding: 0 1rem;
+    }
+
+    .nav-right {
+        gap: 0.5rem;
+    }
+
+    .nav-button {
+        padding: 0.5rem 0.2rem;
+        font-size: 0.7rem;
+    }
+
+    .logo {
+        height: 30px;
     }
 }
